src/objects/Holidays_and_Weekends__c.object
<CustomObject>
    <description>Holidays and Weekends</description>
    <fields>
        <fullName>Date_Unique__c</fullName>
        <label>Date_Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Workday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Holidays and Weekends</label>
    <listViews>
        <fullName>China_Holiday2</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Date_Unique__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2017</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Holiday,Workday</value>
        </filters>
        <label>China Holiday2</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Holidays and Weekends Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>